--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -64,6 +64,7 @@ jobs:
       with:
         tag_name: ${{ github.ref }}
         release_name: ${{ github.ref }}
+        allowUpdates: true
   
     - name: Upload Release APK
       id: upload_release_asset
