--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -66,6 +66,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: apk/app-debug.apk
-        asset_name: ${{ github.event.repository.name }}.apk
+        asset_path: ./app.zip
+        asset_name: app.zip
         asset_content_type: application/zip
