--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -14,30 +14,30 @@ on:
 
 jobs:
   # Automatically create build
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Checkout
-  #     uses: actions/checkout@v3
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
 
-  #   - name: Setup JDK
-  #     uses: actions/setup-java@v3
-  #     with:
-  #       java-version: '11'
-  #       distribution: 'temurin'
-  #       cache: gradle
+    - name: Setup JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
 
-  #   - name: Grant execute permission for gradlew
-  #     run: chmod +x gradlew
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
 
-  #   - name: Build with Gradle
-  #     run: ./gradlew build
+    - name: Build with Gradle
+      run: ./gradlew build
 
-  #   - name: Upload APK
-  #     uses: actions/upload-artifact@v3.1.1
-  #     with:
-  #       name: app
-  #       path: app/build/outputs/apk/debug/app-debug.apk
+    - name: Upload APK
+      uses: actions/upload-artifact@v3.1.1
+      with:
+        name: app
+        path: app/build/outputs/apk/debug/app-debug.apk
 
   # Automatically create a GitHub Release, with release details specified (the relevant commits)
   release:
