--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -62,5 +62,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: app/app-debug.apk
-        asset_name: ${{ github.event.repository.name }}.apk
+        asset_name: app-debug.apk
         asset_content_type: application/zip
