--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -70,6 +70,6 @@ jobs:
       uses: fjogeleit/http-request-action@v1
       with:
         url: ${{ secrets.VERSION_UPDATE_URL }}
-        method: 'PUT'
+        method: 'POST'
         customHeaders: '{"Content-Type": "application/json"}'
         data: ' { "platform": "android" ,"version": "${{ github.ref }}" }'
